# course_project_DRF

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py
fixtures/: habits_data.json  users_data.json
habits/: tasks.py  tests.py  validators.py
habits/migrations/: 0001_initial.py
users/: models.py  permissions.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_tg_chat_id.py
